--- a/application/templates/admin/add-record.html
+++ b/application/templates/admin/add-record.html
@@ -22,8 +22,9 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <form class="govuk-form" method="POST">
-      {{ form.csrf_token }}
+      {{ form.hidden_tag() }}
       {% for field in form %}
+      {%- if field.name != 'csrf_token' %}
       <div class="govuk-form-group">
         {{ field.label(class='govuk-label') }}
         {%- if field.description %}
@@ -42,6 +43,7 @@
             </ul>
         {% endif %}
       </div>
+      {% endif %}{# end if not csrf_token #}
       {% endfor %}
       <div class="govuk-button-group">
         <button class="govuk-button" type="submit">Create record</button>
