--- a/application/templates/plan/add-event.html
+++ b/application/templates/plan/add-event.html
@@ -10,7 +10,7 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <form class="govuk-form" method="POST">
-      {{ form.csrf_token }}
+      {{ form.hidden_tag() }}
 
       <div data-module="select-or-new">
         <div class="govuk-form-group">
@@ -20,7 +20,7 @@
       </div>
 
       {% for field in form %}
-      {%- if field.name not in ['event_date_year', 'event_date_month', 'event_date_day', 'notes', 'development_plan_event'] %}
+      {%- if field.name not in ['event_date_year', 'event_date_month', 'event_date_day', 'notes', 'development_plan_event', 'csrf_token'] %}
         {%- if field.name == 'organisations' %}
         <div class="app-organisation-select" data-module="multi-select">
           <div class="govuk-form-group" data-mulit-select="form-group">
