--- a/application/templates/plan/edit.html
+++ b/application/templates/plan/edit.html
@@ -10,7 +10,7 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <form class="govuk-form" method="POST">
-      {{ form.csrf_token }}
+      {{ form.hidden_tag() }}
 
       <div class="govuk-form-group">
         <label for="#" class="govuk-label">Reference</label>
@@ -18,7 +18,7 @@
       </div>
 
       {% for field in form %}
-      {%- if field.name not in ['reference', 'period_start_date', 'period_end_date', 'development_plan_type'] %}
+      {%- if field.name not in ['reference', 'period_start_date', 'period_end_date', 'development_plan_type', 'csrf_token'] %}
         {%- if field.name == 'organisations' %}
           <div class="app-organisation-select" data-module="multi-select">
             <div class="govuk-form-group" data-mulit-select="form-group">
