--- a/application/templates/plan/new.html
+++ b/application/templates/plan/new.html
@@ -8,9 +8,9 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <form class="govuk-form" method="POST">
-      {{ form.csrf_token }}
+      {{ form.hidden_tag() }}
       {% for field in form %}
-        {% if field.name not in ['development_plan_type', 'period_start_date', 'period_end_date'] %}
+        {% if field.name not in ['development_plan_type', 'period_start_date', 'period_end_date', 'csrf_token'] %}
         {%- if field.name == 'organisations' %}
         <div class="app-organisation-select" data-module="multi-select">
           <div class="govuk-form-group" data-mulit-select="form-group">
